# autocli-old

./: README.deploy.md  README.github-packages.md  README.md  README.testing-github.md  README.testing-pypi.md  pyproject.toml
.github/workflows/: deploy.yml
examples/dirs_app/: run.py
examples/dunder_app/commands/: user__delete.py
scripts/: examples_generator.py  setup_pypirc.sh
src/: user__add.py
src/autocli/: __init__.py
tests/: README.md  test_examples.py
