[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autocli"
version = "0.1.0"
description = "A dynamic argparse command loader for modular CLIs using __ separation."
readme = "README.md"
authors = [{name = "davfive", email = "davfive@gmail.com"}] # IMPORTANT: Update your email
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
keywords = ["cli", "argparse", "subcommands", "dynamic", "autocli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools.packages.find]
where = ["src"] # Crucial: tells setuptools to look inside the 'src' directory