[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "autocli"
description = "A dynamic argparse command loader for modular CLIs using __ separation."
readme = "README.md"
authors = [{name = "davfive", email = "davfive@gmail.com"}]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["cli", "argparse", "subcommands", "dynamic", "autocli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dynamic = ["version"] 

[project.optional-dependencies]
testing = [
    "pytest>=7.0.0", 
    "pytest-cov"
]

[tool.setuptools_scm]
write_to = "src/autocli/_version.py" 

[tool.setuptools.packages.find]
where = ["src"]

# Ensure setuptools includes your LICENSE file in built distributions without
# generating the problematic metadata field.
[tool.setuptools]
license_files = ["LICENSE"]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests" 
xfail_strict = true
addopts = "--cov=autocli --cov-report=term-missing --strict-markers"